--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,20 @@
-
 {
   "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
+  "printWidth": 110,
   "singleQuote": true,
-  "printWidth": 100
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": false,
+  "endOfLine": "auto",
+  "overrides": [
+    {
+      "files": ".prettierrc",
+      "options": { "parser": "json" }
+    }
+  ],
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrderParserPlugins": ["decorators-legacy", "typescript", "jsx"],
+  "importOrder": ["^@[^/](.*)$", "^@/", "^[./]", "^react-ace", "^ace-builds"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
