--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
+    "chrome-types": "^0.1.318",
     "eslint": "^9.14.0",
     "eslint-config-alloy": "^5.1.2",
-    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
+    "rollup-plugin-copy": "^3.5.0",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
