--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.2",
+    "dayjs": "^1.11.13",
     "pinia": "^2.2.6",
+    "primevue": "^4.2.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -31,14 +34,19 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "chrome-types": "^0.1.318",
     "eslint": "^9.14.0",
     "eslint-config-alloy": "^5.1.2",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "npm-run-all2": "^7.0.1",
+    "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "rollup-plugin-copy": "^3.5.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
