--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "less-loader": "^12.2.0",
     "npm-run-all2": "^7.0.1",
     "postcss": "^8.4.49",
+    "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.3.3",
     "rollup-plugin-copy": "^3.5.0",
     "tailwindcss": "^3.4.15",
