--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@primevue/themes": "^4.2.2",
     "dayjs": "^1.11.13",
     "pinia": "^2.2.6",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.12",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
